<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActyvity"
    android:focusableInTouchMode="true"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="10dp"
        android:text="@string/Register_title"
        style="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_NamaSiswa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/siswa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/Wajib"
        app:helperTextTextColor="@color/Red_dark"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_NamaSiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="50"
            android:hint="@string/siswa"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/til_alamat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/Wajib"
        app:helperTextTextColor="@color/Red_dark"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_NamaSiswa">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="100"
            android:hint="@string/til_alamat"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_AsalSklh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/til_asal_sekolah"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/Wajib"
        app:helperTextTextColor="@color/Red_dark"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_Alamat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_AsalSklh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="40"
            android:hint="@string/til_asal_sekolah"/>
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_NamaAyah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ayah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:helperText="@string/Wajib"
                app:helperTextTextColor="@color/Red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_AsalSklh">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_NamaAyah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="40"
                    android:hint="@string/ayah"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_NamaIbu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ibu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:helperText="@string/Wajib"
                app:helperTextTextColor="@color/Red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_NamaAyah">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_NamaIbu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="40"
                    android:hint="@string/ibu"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Pekerjaan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:helperText="@string/Wajib"
                app:helperTextTextColor="@color/Red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_NamaIbu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Pekerjaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="40"
                    android:hint="@string/Pekerjaan"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Nomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/wa"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:helperText="@string/Wajib"
                app:helperTextTextColor="@color/Red_dark"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_Pekerjaan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Nomor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="40"
                    android:hint="@string/wa"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_Nomor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">


        <AutoCompleteTextView
            android:id="@+id/jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/item_label"
            android:inputType="none">

        </AutoCompleteTextView>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jenis_kelamin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/Kelas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/kelas"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Kelas"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/Mapel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/mapel"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Mapel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/program"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/program"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/program"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/Hari"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hari"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Hari"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/jam"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/jam"
                android:inputType="none">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_havent_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Kirim"
            style="@style/Buttonwhite"
            app:layout_constraintBottom_toTopOf="@id/jam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



    </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>